--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
             authorization-uri: https://oauth.pipedrive.com/oauth/authorize
             token-uri: https://oauth.pipedrive.com/oauth/token
             user-info-ur: https://developers.pipedrive.com/docs/api/v1/users/me
+
+main:
+  allow-bean-definition-overriding=true:
